create sql query test, refactor handlers
